--- a/package.json
+++ b/package.json
@@ -10,26 +10,31 @@
   },
   "dependencies": {
     "@babel/eslint-parser": "^7.19.1",
-    "eslint-plugin-react-native": "^4.0.0",
-    "expo": "~46.0.9",
-    "expo-status-bar": "~1.4.0",
-    "react": "18.0.0",
-    "react-native": "0.69.5",
-    "react-native-safe-area-context": "^4.3.4",
     "@expo/webpack-config": "^0.17.0",
     "@react-native-async-storage/async-storage": "^1.17.10",
-    "@react-navigation/bottom-tabs": "^6.3.3",
-    "@react-navigation/native": "^6.0.12",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/bottom-tabs": "^6.4.0",
+    "@react-navigation/drawer": "^6.5.0",
+    "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.8.0",
+    "@react-navigation/stack": "^6.3.1",
     "@rneui/base": "^4.0.0-rc.6",
     "@rneui/themed": "^4.0.0-rc.6",
+    "eslint-plugin-react-native": "^4.0.0",
+    "expo": "~46.0.9",
+    "expo-av": "~12.0.4",
+    "expo-image-picker": "~13.3.1",
+    "expo-screen-orientation": "~4.3.0",
+    "expo-status-bar": "~1.4.0",
+    "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-hook-form": "^7.34.2",
+    "react-native": "0.69.5",
+    "react-native-gesture-handler": "^2.6.2",
+    "react-native-reanimated": "^2.10.0",
+    "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "~3.15.0",
-    "react-native-web": "~0.18.7",
-    "expo-image-picker": "~13.3.1",
-    "expo-av": "~12.0.4",
-    "expo-screen-orientation": "~4.3.0"
+    "react-native-web": "~0.18.7"
   },
   "devDependencies": {
     "@babel/core": "^7.19.1",
