--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "react-native-safe-area-context": "^4.3.4",
     "react-native-screens": "~3.15.0",
     "react-native-select-dropdown": "^2.0.4",
-    "react-native-web": "~0.18.7"
+    "react-native-web": "~0.18.7",
+    "react-simple-star-rating": "^5.1.0",
+    "react-star-rating": "^1.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.19.1",
