--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@babel/eslint-parser": "^7.19.1",
+    "@expo/vector-icons": "^13.0.0",
     "@expo/webpack-config": "^0.17.0",
     "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-navigation/bottom-tabs": "^6.3.3",
@@ -17,6 +18,7 @@
     "@react-navigation/native-stack": "^6.8.0",
     "@rneui/base": "^4.0.0-rc.6",
     "@rneui/themed": "^4.0.0-rc.6",
+    "@styled-icons/entypo": "^10.46.0",
     "eslint-plugin-react-native": "^4.0.0",
     "expo": "~46.0.9",
     "expo-av": "~12.0.4",
