--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "expo-image-picker": "~13.3.1",
     "expo-screen-orientation": "~4.3.0",
     "expo-status-bar": "~1.4.0",
+    "prop-types": "^15.8.1",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-hook-form": "^7.34.2",
