--- a/package.json
+++ b/package.json
@@ -26,14 +26,15 @@
     "expo-image-picker": "~13.3.1",
     "expo-screen-orientation": "~4.3.0",
     "expo-status-bar": "~1.4.0",
-    "prop-types": "^15.8.1",
     "moment": "^2.29.4",
+    "prop-types": "^15.8.1",
     "react": "18.0.0",
     "react-date-countdown-timer": "^1.1.0",
     "react-dom": "18.0.0",
     "react-hook-form": "^7.34.2",
     "react-native": "0.69.5",
     "react-native-countdown-component": "^2.7.1",
+    "react-native-countdown-timer-hooks": "^1.0.3",
     "react-native-element-dropdown": "^2.3.0",
     "react-native-material-dropdown": "^0.11.1",
     "react-native-safe-area-context": "^4.3.4",
